apps/pms/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: pms
  labels:
    app: pms
    version: v1
spec:
  type: LoadBalancer
  selector:
    app: pms
    version: v1
  ports:
  - name: https
    port: 32400
    targetPort: 32400
