apps/pms/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pms
  annotations:
    external-dns.alpha.kubernetes.io/hostname: quizzical-queen.desertbluffs.com
spec:
  parentRefs:
  - name: internet
    namespace: envoy-gateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - quizzical-queen.desertbluffs.com
  rules:
  - backendRefs:
    - name: pms
      port: 32400
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pms-private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: quizzical-queen.radoncanyon.com
spec:
  parentRefs:
  - name: private
    namespace: envoy-gateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - quizzical-queen.radoncanyon.com
  rules:
  - backendRefs:
    - name: pms
      port: 32400
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
