apps/pms/ingress-tailscale.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-ingress
  annotations:
    tailscale.com/proxy-group: heimdall
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - quizzical-queen
  defaultBackend:
    service:
      name: pms
      port:
        name: https
  ingressClassName: tailscale
